--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "svg-sprite-loader": "^5.0.0",
     "svgo": "^1.3.2",
     "svgo-loader": "^2.2.1",
+    "swiper": "6.3.5",
     "terser-webpack-plugin": "4.2.2",
     "webpack": "^4.44.2",
     "webpack-cli": "3.3.12",
